# nativesca

./: CMakeLists.txt  README.md
cmake-modules/: FindSelfPortrait.cmake  FindTUSCANY_NATIVE.cmake
src/: CMakeLists.txt
src/calculator/: CMakeLists.txt
src/calculator/client/: CMakeLists.txt  CalculatorClient.cpp  runclient.sh
src/calculator/sample.calculator/: CMakeLists.txt  Calculator.h  CalculatorComponent.componentType  CalculatorImpl.cpp  CalculatorImpl.h  Divide.h  DivideComponent.componentType  DivideImpl.cpp  DivideImpl.h  sample.calculator.composite
src/module/: CMakeLists.txt  CPPIoCExtension.cpp  ComponentContext.cpp  ComponentContext.h  CompositeContext.cpp  CompositeContext.h  IoCImplementationExtension.cpp  IoCImplementationExtension.h  IoCInterfaceExtension.cpp  IoCInterfaceExtension.h  IoCServiceProxy.cpp  IoCServiceProxy.h  IoCServiceWrapper.cpp  IoCServiceWrapper.h  VariantToParameter.cpp  VariantToParameter.h
src/module/model/: IoCImplementation.cpp  IoCImplementation.h  IoCInterface.cpp  IoCInterface.h  IoCReferenceBinding.cpp  IoCReferenceBinding.h  IoCServiceBinding.cpp  IoCServiceBinding.h
src/unit_test/: CMakeLists.txt
src/xsd/: sca-implementation-ioc.xsd  sca-interface-ioc.xsd
